complete user creation and activation without email
